--- a/MyMovies.Web/Views/Admin/_MovieForm.cshtml
+++ b/MyMovies.Web/Views/Admin/_MovieForm.cshtml
@@ -129,12 +129,7 @@
             @Html.HiddenFor(model => model.Poster)
             @Html.HiddenFor(model => model.MovieId, new { ng_model = "movieId" })
             <div class="col-xs-12">
-                <input type="submit" class="btn btn-custom btn-lg" value="Save" />
-                <a href="/Admin/MovieUpdate?id=@Model.MovieId" class="btn btn-primary btn-lg">Get Updates</a>
-                @if (!String.IsNullOrEmpty(Model.ImdbId))
-                {
-                    <a href="http://www.imdb.com/title/@Model.ImdbId" target="_blank" class="btn btn-warning btn-lg">View In IMDB</a>
-                }
+                @Html.Partial("_Buttons", Model)
             </div>
         </div>
     }
