--- a/MyMovies.Web/Views/Admin/Index.cshtml
+++ b/MyMovies.Web/Views/Admin/Index.cshtml
@@ -41,7 +41,7 @@
         }
 
         <div class="row">
-            <div class="col-xs-8">
+            <div class="col-md-8">
                 @using (Html.BeginForm("Search", "Admin", FormMethod.Get))
                 {
                     <div class="input-group">
@@ -52,6 +52,9 @@
                         <input type="text" class="form-control" placeholder="Enter ImdbId Here or Movie Name" name="key" value="@search">
                     </div>
                 }
+            </div>
+            <div class="col-md-4 hidden-xs">
+                @Html.Partial("_Buttons", Model)
             </div>
         </div>
 
