--- a/MyMovies.Web/Views/Movie/_Movie.cshtml
+++ b/MyMovies.Web/Views/Movie/_Movie.cshtml
@@ -2,12 +2,14 @@
 
 <div class="col-sm-6">
     <div class="col-sm-12">
-        <h3>@Model.DisplayTitle</h3>
-    </div>    
+        <h3>@Model.DisplayTitle
+            <span class="pull-right"><i class="fa fa-star detail-star" aria-hidden="true">&nbsp;@Model.FormattedRate</i></span>
+        </h3>
+    </div>
     <div class="col-sm-5">
         <div class="portfolio-item portfolio-meta-slideup push">
             <figure>
-                <a href="/Movie/Detail?id=@Model.MovieId" class="zoom-item" title="@Model.Title">
+                <a href='@Url.Action("Detail", new {id=@Model.MovieId})' title="@Model.Title">
                     <img src="@Model.Poster" alt="@Model.Title" class="img-responsive">
                 </a>
             </figure>
@@ -22,11 +24,11 @@
         </div>
     </div>
     <div class="col-sm-7">
-        <div class="col-xs-12"><span class=" pull-right">@Model.DisplayRate/10</span></div>
+        @*<div class="col-xs-12"><span class=" pull-right">@Model.DisplayRate/10</span></div>*@
         <div class="movie-genre">
             @foreach (var genre in Model.GenreList)
             {
-                @Html.ActionLink(@genre, "Index", new {Category = @genre})
+                @Html.ActionLink(@genre, "Index", new { Category = @genre })
                 if (genre != Model.LastGenre)
                 {
                     <text>|</text>
@@ -35,48 +37,42 @@
         </div>
         <div>
             <span>Stars: </span>
-            <div>
-                @foreach (var star in Model.StarLists)
+            @foreach (var star in Model.StarLists)
+            {
+                @Html.ActionLink(@star, "Index", new { Star = @star })
+                if (star != Model.LastStar)
                 {
-                    @Html.ActionLink(@star, "Index", new {Star = @star})
-                    if (star != Model.LastStar)
+                    <text>|</text>
+                }
+            }
+        </div>
+        <div>
+            <span>Writers: </span>
+            @foreach (var writer in Model.WriterList)
+            {
+                if (!String.IsNullOrEmpty(writer))
+                {
+                    @Html.ActionLink(@writer, "Index", new { Writer = @writer })
+                    if (writer != Model.LastWriter)
                     {
                         <text>|</text>
                     }
                 }
-            </div>
-        </div>
-        <div>
-            <span>Writers: </span>
-            <div>
-                @foreach (var writer in Model.WriterList)
-                {
-                    if (!String.IsNullOrEmpty(writer))
-                    {
-                        @Html.ActionLink(@writer, "Index", new {Writer = @writer})
-                        if (writer != Model.LastWriter)
-                        {
-                            <text>|</text>
-                        }
-                    }
-                }
-            </div>
+            }
         </div>
         <div>
             <span>Directors: </span>
-            <div>
-                @foreach (var director in Model.DirectorList)
+            @foreach (var director in Model.DirectorList)
+            {
+                if (!String.IsNullOrEmpty(director))
                 {
-                    if (!String.IsNullOrEmpty(director))
+                    @Html.ActionLink(@director, "Index", new { Writer = @director })
+                    if (director != Model.LastDirector)
                     {
-                        @Html.ActionLink(@director, "Index", new {Writer = @director})
-                        if (director != Model.LastDirector)
-                        {
-                            <text>|</text>
-                        }
+                        <text>|</text>
                     }
                 }
-            </div>
+            }
         </div>
         <div>
             @Model.ShortenedSumary
