--- a/MyMovies.Web/Views/Movie/Index.cshtml
+++ b/MyMovies.Web/Views/Movie/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model MyMovies.Web.ViewModels.MoviePaginationViewModel
 <div id="content" role="main">
-    <div class="page-header list-header">
+    <div class="page-header" style="background: url(@Model.Banner) no-repeat;background-size:100%;height: 140px;display:block;background-position: center;">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
