Sorting movies in list

--- a/MyMovies.Web/Views/Admin/AddEditBanner.cshtml
+++ b/MyMovies.Web/Views/Admin/AddEditBanner.cshtml
@@ -77,7 +77,7 @@
 @section Scripts {
     <script src="~/Scripts/bootstrap-colorpicker.min.js"></script>
     <script>
-        var app = angular.module('MovieApp', []);
+        //var app = angular.module('MovieApp', []);
         app.controller('AdminController', function ($scope) {
             $scope.bannerText = '@Model.Identifier';
             $scope.showTextBox = false;
