--- a/MyMovies.Web/Views/Movie/Index.cshtml
+++ b/MyMovies.Web/Views/Movie/Index.cshtml
@@ -40,11 +40,15 @@
     </div>
 </div>
 
-<script>
-    var app = angular.module('MovieApp', []);
-    app.controller('MovieListController', function ($scope) {
-        $scope.addToWatchList = function (movieId) {
-            alert(movieId);
-        }
-    });
-</script>
+@section scripts
+{
+    <script>
+        //var app = angular.module('MovieApp', []);
+        app.controller('MovieListController', function ($scope) {
+            $scope.addToWatchList = function (movieId) {
+                alert(movieId);
+            }
+        });
+    </script>
+}
+
