--- a/MyMovies.Web/Views/Shared/_Layout.cshtml
+++ b/MyMovies.Web/Views/Shared/_Layout.cshtml
@@ -6,7 +6,8 @@
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    <script src="~/Scripts/angular.min.js"></script>    
+    <script src="~/Scripts/angular.js"></script>
+    <script src="~/Scripts/angular-cookies.js"></script>
 </head>
 
 <body ng-app="MovieApp">
