--- a/MyMovies.Web/Content/my-movie.css
+++ b/MyMovies.Web/Content/my-movie.css
@@ -47,7 +47,7 @@ h1.movie-poster {
 }
 
 .list-header {
-    background: url('/Images/test.jpg')no-repeat;
+    background: url('/Images/page-header.jpg')no-repeat;
     background-size: 100%;
     height: 140px;
     display: block;
