--- a/MyMovies.Web/Views/Movie/_Movie.cshtml
+++ b/MyMovies.Web/Views/Movie/_Movie.cshtml
@@ -1,5 +1,7 @@
 ﻿@model MyMovies.Web.ViewModels.MovieViewModel
-
+@{
+    var addToListClass = User.Identity.IsAuthenticated ? "portfolio-meta-slideup push" : "";
+}
 <div class="col-sm-6">
     <div class="col-sm-12">
         <h3>@Model.DisplayTitle
@@ -7,20 +9,23 @@
         </h3>
     </div>
     <div class="col-sm-5">
-        <div class="portfolio-item portfolio-meta-slideup push">
+        <div class="portfolio-item @addToListClass">
             <figure>
-                <a href='@Url.Action("Detail", new {id=@Model.MovieId})' title="@Model.Title">
+                <a href='@Url.Action("Detail", new {id = @Model.MovieId})' title="@Model.Title">
                     <img src="@Model.Poster" alt="@Model.Title" class="img-responsive">
                 </a>
             </figure>
-            <div class="portfolio-meta">
-                <a href="/Admin/Search?key=@Model.ImdbId">Edit</a>
-                <h1 class="movie-poster">
-                    <a href="javascript:void(0)" title="Favourite" ng-click="addToWatchList(@Model.MovieId)">
-                        <i class="fa fa-heart-o"></i>
-                    </a>
-                </h1>
-            </div>
+            @if (User.Identity.IsAuthenticated)
+            {
+                <div class="portfolio-meta">
+                    <a href="/Admin/Search?key=@Model.ImdbId">Edit</a>
+                    <h1 class="movie-poster">
+                        <a href="javascript:void(0)" title="Favourite" ng-click="addToWatchList(@Model.MovieId)">
+                            <i class="fa fa-heart-o"></i>
+                        </a>
+                    </h1>
+                </div>
+            }
         </div>
     </div>
     <div class="col-sm-7">
