--- a/MyMovies.Web/Views/Admin/AddEditBanner.cshtml
+++ b/MyMovies.Web/Views/Admin/AddEditBanner.cshtml
@@ -51,11 +51,11 @@
                     <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
                     </span>
                 </div>
-                <div class="page-header" style="background: url(@Model.HeaderBg) no-repeat; background-size: 100%; height: 140px; display: block" id="BackGround">
+                <div class="page-header" style="background: url(@Model.HeaderBg) no-repeat; background-size: 100%; height: 140px; display: block; background-position: center" id="BackGround">
                     <div class="col-md-12">
 
                         <h2 ng-show="!showTextBox">
-                            <div ng-bind="bannerText" ng-click="displayTextBox()" id="BannerDivText" style="color: white"></div>
+                            <div ng-bind="bannerText" ng-click="displayTextBox()" id="BannerDivText" style="color: @Model.TextColor;text-shadow: 2px 2px 4px #000000;"></div>
                         </h2>
                         <input type="text" class="form-control no-radius" ng-model="bannerText" ng-show="showTextBox" ng-blur="showTextBox=!showTextBox" id="BannerText" />
                     </div>
@@ -102,6 +102,7 @@
 
                     reader.onload = function (e) {
                         document.getElementById('BackGround').style.backgroundImage = 'url(' + e.target.result + ')';
+                        document.getElementById('BackGround').style.backgroundPosition = 'center';
                     }
 
                     reader.readAsDataURL(input.files[0]);
