--- a/MyMovies.Web/Views/Admin/Index.cshtml
+++ b/MyMovies.Web/Views/Admin/Index.cshtml
@@ -53,9 +53,6 @@
                     </div>
                 }
             </div>
-            <div class="col-md-4 hidden-xs">
-                @Html.Partial("_Buttons", Model)
-            </div>
         </div>
 
         @Html.Partial("_MovieForm", Model)
@@ -65,4 +62,59 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    <script>
+        app.controller('AdminController', function ($http, $scope) {
+            $scope.fileName = '@(Model.FileName)';
+            $scope.fileSize = '@(Model.FileSize)';
+
+            $scope.fileChange = function (event) {
+                var input = event.target;
+
+                if (input.files && input.files[0]) {
+                    var reader = new FileReader();
+
+                    reader.onload = function (e) {
+                        $('#MoviePoster').attr('src', e.target.result);
+                    }
+
+                    reader.readAsDataURL(input.files[0]);
+                }
+            }
+
+            $scope.getFileDetails = function () {
+                var input = $(document.createElement('input'));
+                input.attr("type", "file");
+
+                $(input).change(function () {
+                    $scope.fileName = $(input)[0].files[0].name;
+                    var fileSize = $(input)[0].files[0].size;
+                    var ctr = 0;
+                    var byteSizes = ["kb", "mb", "gb"];
+
+                    fileSize = parseFloat(fileSize) / 1024;
+                    while (fileSize > 1000) {
+                        fileSize = fileSize / 1024;
+                        ctr++;
+                    }
+
+                    $scope.fileSize = fileSize.toFixed(2) + byteSizes[ctr];
+                    $scope.$apply();
+                });
+
+                input.trigger('click');
+                return false;
+            }
+        });
+
+        app.directive('customOnChange', function () {
+            return {
+                restrict: 'A',
+                link: function (scope, element, attrs) {
+                    var onChangeHandler = scope.$eval(attrs.customOnChange);
+                    element.bind('change', onChangeHandler);
+                }
+            };
+        });
+    </script>
+
 }
