--- a/MyMovies.Web/Views/Movie/Index.cshtml
+++ b/MyMovies.Web/Views/Movie/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model MyMovies.Web.ViewModels.MoviePaginationViewModel
 <div id="content" role="main">
-    <div class="page-header" style="background: url(@Model.Banner) no-repeat;background-size:100%;height: 140px;display:block;background-position: center;">
+    <div class="page-header" style="background: url(@Model.Banner.Poster) no-repeat;background-size:100%;height: 140px;display:block;background-position: center;">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h2>@Model.Pagination.ListTitle</h2>
+                    <h2 style="color:@Model.Banner.TextColor;text-shadow: 2px 2px 4px #000000;">@Model.Pagination.ListTitle</h2>
                 </div>
             </div>
         </div>
