--- a/MyMovies.Web/Views/Admin/Banner.cshtml
+++ b/MyMovies.Web/Views/Admin/Banner.cshtml
@@ -24,37 +24,23 @@
             </div>
         </div>
 
-        <div class="row t1">
-
-        </div>
-        <div class="table-responsive">
-            <table class="table table-bordered table-hover table-condensed">
-                <thead>
-                    <tr>
-                        <th>Identifier</th>
-                        <th>Text Color</th>
-                        <th>Type</th>
-                        <th>Poster</th>
-                        <th></th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (var item in Model.OrderBy(x => x.Type))
-                    {
-                        <tr>
-                            <td>@item.Identifier</td>
-                            <td>@item.TextColor</td>
-                            <td>@item.Type.ToString()</td>
-                            <td>@item.Poster</td>
-                            <td>
-                                @Html.ActionLink("edit", "EditBanner", new { id = item.BannerId }) |
-                                @Html.ActionLink("delete", "DeleteBanner", new { id = item.BannerId }, new { onclick="return confirm('Are you sure you want to delete this banner?');" }) |
-                                @Html.ActionLink("preview", "PreviewBanner", new { id = item.BannerId })
-                            </td>
-                        </tr>
-                    }
-                </tbody>
-            </table>
-        </div>
+        @foreach (var item in Model.OrderBy(x => x.Type))
+        {
+            <div class="row t1">
+                <div class="col-md-12">
+                    <div class="banner-editdelete">
+                        @Html.ActionLink("Edit", "EditBanner", new { id = item.BannerId }) |
+                        @Html.ActionLink("Delete", "DeleteBanner", new { id = item.BannerId }, new { onclick = "return confirm('Are you sure you want to delete this banner?');" })
+                    </div>
+                </div>
+                <div class="page-header" style="background: url(@item.Poster) no-repeat; background-size: 100%; height: 140px; display: block; background-position: center">
+                    <div class="col-md-12">
+                        <h2 style="color: @item.TextColor; text-shadow: 2px 2px 4px #000000;">
+                            @item.Type.ToString(): @item.Identifier
+                        </h2>
+                    </div>
+                </div>
+            </div>
+        }
     </div>
 </div>
